add css classes as hash with :local in the css file

--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -2,3 +2,9 @@ body {
   background: blueviolet;
   color: gold;
 }
+
+:local(.box) {
+  background-color: white;
+  padding: 1em;
+  border: 1px solid deeppink;
+}
